# morphir

./: .gitignore  Cargo.toml  build.fsx  build.sc  bun.lockb  elm.json  package-lock.json  package.json
app/crates/main/: Cargo.toml
app/crates/main/scripts/: hello.js
app/crates/main/src/: cli_args.rs  main.rs
app/morphir-js-cli/: .eslintrc.json  .gitignore  README.md  eslint.config.js  index.ts  package.json  tsconfig.json  vite.config.ts
app/morphir-js-cli/__tests__/: cli-integration.test.ts
app/morphir-js-cli/docs/: commands.md  plugins.md
app/morphir-js-cli/src/: cli.ts
app/morphir-js-cli/src/commands/: morphir.ts
app/morphir-js-cli/src/extensions/: cli-extension.ts
app/scalajs-cli/: build.ts  bun.lockb  elm.json  index.ts  package.json  sandbox-api.ts  vite.config.ts
app/scalajs-cli/elm/projects/sandbox/: package.json
app/scalajs-cli/elm/projects/sandbox/src/: Main.elm
app/scalajs-cli/src/morphir/: Main.scala  MorphirCommand.scala
app/scalajs-cli/src/morphir/cli/make/: Make.scala  MakeOptions.scala
app/scalajs-cli/src/morphir/cli/options/: OptionGroup.scala
app/scalajs-cli/src/morphir/cli/restore/: Restore.scala  RestoreOptions.scala
app/scalajs-cli/src/morphir/elm/interop/: MockMorphirElm.scala
bindings/local/rust/crates/core/: Cargo.toml
crates/cli/src/: main.rs
crates/codemodel/: Cargo.toml
crates/codemodel/src/: lib.rs
crates/codemodel/src/internals/: distribution.rs  ir.rs  mod.rs  module.rs  naming.rs  project.rs  tools.rs  workspace.rs
crates/codemodel/src/internals/classic/: fq_name.rs  mod.rs  module.rs  name.rs  package.rs  path.rs
crates/codemodel/src/internals/classic/deprecated/: name.rs
crates/codemodel/src/internals/morphir/: builder.rs  mod.rs
crates/codemodel/src/internals/name/: mod.rs
crates/codemodel/src/internals/names/: mod.rs
crates/codemodel/src/internals/workspace/: builder.rs  mod.rs
crates/codemodel/tests/: module.rs  names.rs
crates/codemodel/tests/features/: names.feature
crates/hosting/: Cargo.toml
crates/hosting/src/: lib.rs
crates/hosting/src/internals/: host.rs
crates/main/: Cargo.toml
crates/main/experiments/boa/src/: main.rs
crates/main/src/: cli_args.rs  lib.rs  main.rs
crates/morphir-javy-core/: Cargo.toml
crates/morphir-javy-core/src/: execution.rs  lib.rs  main.rs  runtime.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/src/internals/: workspace.rs
crates/testkit/: Cargo.toml
crates/testkit/tests/: module.rs
devkit/rust/cdk/: Cargo.toml
devkit/rust/cdk/src/: lib.rs
devkit/rust/cdk/src/internals/: mod.rs  naming.rs  project.rs
devkit/rust/codemodel/: Cargo.toml
devkit/rust/codemodel/src/: lib.rs
devkit/rust/codemodel/src/internals/: distribution.rs  ir.rs  mod.rs  module.rs
devkit/rust/codemodel/src/internals/classic/: mod.rs  name.rs  path.rs
devkit/rust/sdk/: Cargo.toml
examples/workspaces/elm-single-project-workspace/: ReadMe.md  bun.lockb  elm.json  morphir.json  package.json
examples/workspaces/elm-single-project-workspace/.morphir/extensions/: ReadMe.md
examples/workspaces/elm-single-project-workspace/src/Morphir/Elm/SingleProject/: AuthorName.elm  Model.elm
extensions/rust/package_management/: Cargo.toml  Makefile.toml
extensions/rust/package_management/src/: lib.rs
morphir-dotnet/: Directory.Packages.props  morphir.sln
morphir-dotnet/src/Morphir/: Main.fs  Morphir.fsproj
morphir-dotnet/src/Morphir.Client/: Contracts.fs  Morphir.Client.fsproj
morphir-dotnet/src/Morphir.CodeModel/: CodeModel.fs  Morphir.CodeModel.fsproj  Strings.fs
morphir-dotnet/src/Morphir.CodeModel/CodeModel/: versioning.fs
morphir-dotnet/src/Morphir.CodeModel/IR/: IR.Naming.fs  Name.fs  Path.fs
morphir-dotnet/src/Morphir.CodeModel/Utils/: Strings.fs
morphir-dotnet/src/Morphir.Explorer/: Morphir.Explorer.fsproj
morphir-dotnet/src/Morphir.Live/: Morphir.Live.fsproj  Startup.fs
morphir-dotnet/src/Morphir.Live.Client/: Morphir.Live.Client.fsproj
morphir-dotnet/src/Morphir.Live.Client/Pages/: Counter.fs
morphir-dotnet/src/Morphir.Live/Components/: App.fs  Routes.fs
morphir-dotnet/src/Morphir.Live/Components/Layout/: MainLayout.fs  NavMenu.fs
morphir-dotnet/src/Morphir.Live/Components/Pages/: From.fs  Home.fs
morphir-dotnet/src/Morphir.Live/Properties/: launchSettings.json
morphir-dotnet/src/Morphir.Runtime/: Library.fs
morphir-dotnet/src/Morphir.SDK.Testing/: Morphir.SDK.Testing.fsproj
morphir-dotnet/src/extensions/Morphir.Runtime.Extension/: Morphir.Runtime.Extension.fsproj  RuntimeExtension.fs
morphir-dotnet/src/host/Morphir.Hosting/: Host.fs  Morphir.Hosting.fsproj
morphir-dotnet/tests/Morphir.CodeModel.Tests/: Morphir.CodeModel.Tests.fsproj
morphir-dotnet/tests/Morphir.CodeModel.Tests/IR/: PathBuilderTests.fs  PathTests.fs
morphir-dotnet/tests/Morphir.CodeModel.Tests/Utils/: StringTests.fs
morphir-dotnet/tests/Morphir.SDK.Core.Tests/: packages.lock.json
true/: package.json
