[workspace]
resolver = "2"
members = [
    "bindings/local/rust/crates/core",
    "crates/main",
    "crates/testkit",
    "devkit/rust/codemodel",
    "devkit/rust/services",
    "devkit/rust/rdk",
    "devkit/rust/tdk",
    "devkit/rust/xdk",
    "extensions/rust/*",
]
default-members = ["crates/main", "crates/testkit"]

[workspace.dependencies]
anyhow = "^1.0"
clap = "4.5.4"
config = "0.14.0"
cucumber = "0.21.0"
derivative = "2.2.0"
dirs = "5.0.1"
extism = "1.2.0"
extism-pdk = "1.1.0"
flagset = "0.4.5"
futures = "0.3"
heck = "0.5.0"
lasso = "0.7.2"
linked-data = "0.1.2"
miette = "7.2.0"
proptest = "1.4.0"
refined_type = "0.4.16"
regex = "1.10.4"
schematic = "0.15.0"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "^1.0"
serde_repr = "^0.1"
starbase = "0.5.1"
state = "0.6.0"
thiserror = "1.0.58"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.40"
url = "2.2.2"
warpgate = "0.12.1"
