[package]
name = "morphir-codemodel"
version = "0.0.1"
description = "Morphir CodeModel"
homepage = "https://morphir.finos.org"
repository = "https://github.com/finos/morphir"
readme = "README.md"
keywords = ["morphir", "finos"]
authors = ["Damian Reeves"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
json = ["serde_json"]

[dependencies]
arcstr.workspace = true
arcstr.features = ["serde", "substr"]
derivative.workspace = true
flagset.workspace = true
heck.workspace = true
lazy-regex.workspace = true
linked-data.workspace = true
once_cell.workspace = true
serde.workspace = true
serde.features = ["derive", "rc"]
serde_json = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
state.workspace = true
thiserror.workspace = true
rdf-types.workspace = true
regex.workspace = true
url.workspace = true
url.features = ["serde"]

[dev-dependencies]
proptest = { workspace = true }
serde_json.workspace = true
cucumber = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "module" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
