[package]
name = "morphir-hosting"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr.workspace = true
arcstr.features = ["serde", "substr"]
morphir-services = { path = "../services" }
serde.workspace = true
serde_json.workspace = true
serde_json.optional = true

[features]
default = ["json"]
json = ["serde_json"]