[package]
name = "morphir-services"
description = "Shared services for working with Morphir"
readme = "README.md"
keywords = ["morphir", "finos"]
authors = ["Damian Reeves"]
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[features]

[dependencies]
arcstr.workspace = true
thiserror.workspace = true
extism-pdk.workspace = true
flagset.workspace = true
lasso.workspace = true
morphir-codemodel = { path = "../codemodel"}
serde_repr = { workspace = true, optional = true }
