[package]
name = "morphir"
version = "0.0.1"
description = "Tools for working with the Morphir IR"
homepage = "https://morphir.finos.org"
repository = "https://github.com/finos/morphir"
readme = "README.md"
keywords = ["morphir", "finos"]
authors = ["Damian Reeves"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "morphir"
path = "src/main.rs"

[[bin]]
name = "morphir-boa"
path = "experiments/boa/src/main.rs"

[features]

[dependencies]
anyhow.workspace = true
boa_engine.workspace = true
boa_runtime.workspace = true
clap.workspace = true
config.workspace = true
dirs.workspace = true
miette = { workspace = true, features = ["fancy"] }
ractor.workspace = true
refined_type.workspace = true
schematic.workspace = true
serde.workspace = true
serde_derive.workspace = true
starbase.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
morphir_codemodel = { path = "../../../devkit/rust/codemodel" }
