[package]
name = "morphir_cdk"
version = "0.0.1"
description = "Morphir CodeModel"
homepage = "https://morphir.finos.org"
repository = "https://github.com/finos/morphir"
readme = "README.md"
keywords = ["morphir", "finos"]
authors = ["Damian Reeves"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]

[dependencies]
flagset.workspace = true
lasso.workspace = true
lasso.features = ["multi-threaded", "serialize"]
serde.workspace = true
serde.features = ["derive"]
serde_repr = { workspace = true, optional = true }
state.workspace = true
url.workspace = true
url.features = ["serde"]

[dev-dependencies]
proptest = { workspace = true }
serde_json.workspace = true
